# FastStlViewer

./: CMakeLists.txt  Model.cpp  Model.h  README.md  controller.cpp  controller.h  geometry.h  main.cpp  utils.cpp  utils.h  view.cpp  view.h
Controller/: controller.cpp  controller.h
Model/: Model.cpp  Model.h  geometry.cpp  geometry.h  model_loader.cpp  model_loader.h
Model/ModelParsers/: ascii_parser.cpp  ascii_parser.h  binary_parser.cpp  binary_parser.h
View/: camera.cpp  camera.h  default_plane.h  view.cpp  view.h
